infra/prod/nats-streaming-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.25.6
          args: 
            [
              '-p',
              '4222',
              '-m',
              '8222',
              '-hbi',
              '5s',
              '-hbt',
              '5s',
              '-hbf',
              '2',
              '-SD',
              '-cid',
              'ebazaar_prod',
              '--store',
              'SQL',
              '--sql_driver',
              'mysql',
              '--sql_source',
              'nats_prod:VOA2UD@Ci7U91@tcp(sql-db.ebazaar.mn:3306)/nats_prod',
              '--user', 
              'nats_prod',
              '--pass', 
              'VOA2UD@Ci7U91'
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  type: LoadBalancer
  externalIPs:
    - 114.129.42.69
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
